Bug 130329 - Installer everytime uses default installation path - doesn't matter I've installed product in different drive.
Summary: Installer everytime uses default installation path - doesn't matter I've inst...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.0.0
Keywords:
: 88644 (view as bug list)
Depends on:
Blocks: Installer-Windows
  Show dependency treegraph
 
Reported: 2020-01-31 15:19 UTC by durumdara
Modified: 2020-03-14 14:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description durumdara 2020-01-31 15:19:25 UTC
Description:
A minor problem with LO installer. 
I have SSD (C:) and HDD (D:), so I installed programs to d:\Programs\. 

When I download a new version of LibreOffice, it tries to install the program to c:\Program Files\, and not show the prev. installation path. 

If I forget to choose custom install, the installer uses C:\. 

It is very disturbing.

Steps to Reproduce:
1. Install your product to d:\Programs
2. Download newer version of LO.
3. The default path is c:\Program Files\

Actual Results:
Two products installed...

Expected Results:
The installer try to get the actual installation path and use it.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2020-02-01 23:26:17 UTC
don't think it's bug

Mike, what do you think?
Comment 2 Mike Kaganski 2020-02-02 16:58:01 UTC
This is definitely a bug.

Repro updating from 6.2.7.1 x64 to 6.3.4.1 x64 or to 6.4.0.3 x64.

Not reproducible updating inside major version - i.e. from to 6.4.0.1 x64 to 6.4.0.3 x64.
Comment 3 Commit Notification 2020-02-03 10:33:22 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/916cbda310a43d46a0789fd8b2c8f15fb86b27b4

tdf#130329: detect previous version's install location

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Roman Kuznetsov 2020-03-14 14:57:24 UTC
*** Bug 88644 has been marked as a duplicate of this bug. ***